# python-cli-to-boutiques

./: .pre-commit-config.yaml  README.md  action.yml  conftest.py  pyproject.toml
.github/workflows/: run_tests.yml
scripts/: argdump_parser.py  argdumprun.py  main.py  mriqc.json  run_argdump.py  run_clickdump.py  update_descriptor.py
tests/: mriqc.json  test_create_descriptor.py  test_run_argdump.py  test_update_descriptor.py
tests/styx-out/boutiques/: descriptor.json
tests/unit/: test_run_argdump.py  test_run_clickdump.py
