[project]
name = "python-cli-to-boutiques"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argdump>=0.1.3",
    "clickdump>=0.1.0",
]

[project.optional-dependencies]
validation = [
    "boutiques>=0.5.33",
]

[tool.pytest.ini_options]
pythonpath = ["scripts", "tests"]

[dependency-groups]
test = [
    "pytest>=9.0.3",
]
dev = [
    "pre-commit>=4.6.0",
    {include-group = "test"},
]
